--- a/pages/home.html
+++ b/pages/home.html
@@ -1,12 +1,12 @@
 <div class="background background--homepage"></div>
 <main ng-init="setHeaderTheme('light')">
-	<div class="mobile-nav-menu" ng-show="show_header_menu">
+<!-- 	<div class="mobile-nav-menu" ng-show="show_header_menu">
 		<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
 		<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
 		<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
 		<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
 		<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
-	</div>
+	</div> -->
 	<div class="inner-container">		
 		<div class="cmyk-crosses">
 			<div class="cmyk-crosses__wrapper">
