--- a/pages/work.html
+++ b/pages/work.html
@@ -81,6 +81,8 @@
 					</div>
 				</div>
 			</div>
+			<div class="media__arrow media__arrow--left" ng-click="go('/done-photography')"></div>
+			<div class="media__arrow media__arrow--right" ng-click="go('/done-videos')"></div>
 		</div>
 		<div class="icons">
 			<div class="icons__icon" ng-click="go('/thinking')">
