--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="tagApp">
 <head>
-	<title>Tag</title>
+	<title>TAG The Agency</title>
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<script>
