add copy to new pages

--- a/pages/done/apps.html
+++ b/pages/done/apps.html
@@ -2,7 +2,7 @@
 	<div class="inner-container inner-container--strategy-page">
 		<div class="copy">
 			<h1>Apps</h1>
-			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
+			<p>Facebook Apps are an excellent way to engage and manage campaigns on Facebook, at TAG The Agency we can create, design, build and manage your next Facebook Campaign!</p>
 		</div>
 		<div class="media">
 			<img src="../imgs/apps.png">
