--- a/pages/done/brand.html
+++ b/pages/done/brand.html
@@ -2,7 +2,8 @@
 	<div class="inner-container">
 		<div class="copy">
 			<h1>Brand</h1>
-			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
+			<p>Social and digital media have influenced the how we create and design, from internal systems, consumer and user experience through to the application of a logo, design thinking and the importance of a solid brand is more important now than ever!</p>
+			<p>At TAG The Agency we have developed a unique method to how we approach brand and the application of design thinking to the social and digital world.</p>
 		</div>
 		<div class="media">
 			<img src="../imgs/brand.png">
