--- a/pages/done/video.html
+++ b/pages/done/video.html
@@ -2,8 +2,8 @@
 	<div class="inner-container">
 		<div class="copy">
 			<h1>Video</h1>
-			<p>VRStudio turns your phone into a high definition 360° Video and 360° Photo viewer.</p>
-			<p>Download the app then simply move your iPhone around and watch as it turns into a window to another world! Then for a full VR experience on an iPhone use VRStudio with Google Cardboard or our own VR Headsets to immerse yourself in the excitement and innovation of virtual reality.<br>We have built the app using Google powered stereoscopic rendering, head tracking for mobile VR and our own VR 360 platform to ensure the very best quality of 360 and VR content.</p>
+			<p>Video is the future of the internet! Facebooks goal is to have over 80% of its content in video format. Having a smart and sustainable strategy that includes video should now be part of any social and digital plan.</p>
+			<p>TAG The Agency specialises in creating socially focused video that is fast and efficient in production and compelling in impact. We are experienced in producing video content for the internet, from traditional 2D videos through to the fast emerging platform of 360 degree video. TAG The Agency is the perfect partner in your video strategy.</p>
 		</div>
 		<div class="media">
 			<div class="work-examples">
