--- a/pages/done/photography.html
+++ b/pages/done/photography.html
@@ -2,7 +2,7 @@
 	<div class="inner-container">
 		<div class="copy">
 			<h1>Photography</h1>
-			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
+			<p>A picture says a 1000 words, in the world of social and digital when attention spans are short and character counts are limited photography can help tell your story fast and effectively.</p>
 		</div>
 		<div class="media">
 			<img src="../imgs/photography.png">
