--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="tagApp">
 <head>
 	<title>TAG The Agency</title>
+	<meta name="description" content="TAG The Agency - Social media and digital content specialists - let’s play!">
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<script>
