--- a/pages/done/brand.html
+++ b/pages/done/brand.html
@@ -11,14 +11,14 @@
 			<div class="media__arrow media__arrow--right" ng-click="go('/done-photography')"></div>
 		</div>
 		<div class="icons">
-			<div class="icons__icon" ng-click="go('/vr')">
+			<div class="icons__icon" ng-click="go('/thinking')">
 				<div class="icons__image icons__image--back"></div>
 			</div>
 			<div class="icons__icon" ng-click="go('/')">
 				<div class="icons__image icons__image--home"></div>
 				<div class="icons__text">Home</div>
 			</div>
-			<div class="icons__icon" ng-click="go('/done')">
+			<div class="icons__icon" ng-click="go('/influencers')">
 				<div class="icons__image icons__image--forward"></div>
 			</div>
 		</div>
