--- a/pages/done/video.html
+++ b/pages/done/video.html
@@ -47,14 +47,14 @@
 			<div class="media__arrow media__arrow--right" ng-click="go('/done-apps')"></div>
 		</div>
 		<div class="icons">
-			<div class="icons__icon" ng-click="go('/doing')">
+			<div class="icons__icon" ng-click="go('/thinking')">
 				<div class="icons__image icons__image--back"></div>
 			</div>
 			<div class="icons__icon" ng-click="go('/')">
 				<div class="icons__image icons__image--home"></div>
 				<div class="icons__text">Home</div>
 			</div>
-			<div class="icons__icon" ng-click="go('/thinking')">
+			<div class="icons__icon" ng-click="go('/influencers')">
 				<div class="icons__image icons__image--forward"></div>
 			</div>
 		</div>
