--- a/pages/vr/vr-cardboard.html
+++ b/pages/vr/vr-cardboard.html
@@ -3,13 +3,12 @@
 	<div class="inner-container">
 		<div class="copy copy--light">
 			<h1>VRStudio</h1>
-			<p>VRStudio turns your phone into a high definition 360° Video and 360° Photo viewer.</p>
-			<p>Download the app then simply move your iPhone around and watch as it turns into a window to another world! Then for a full VR experience on an iPhone use VRStudio with Google Cardboard or our own VR Headsets to immerse yourself in the excitement and innovation of virtual reality.<br>We have built the app using Google powered stereoscopic rendering, head tracking for mobile VR and our own VR 360 platform to ensure the very best quality of 360 and VR content.</p>
+			<p>Looking for VR goggles to really help users get inside your VR content? The TAG The Agency has the solution for you! Buy them, fold them, explore with them! You can purchase your very own pair of our branded VR cardboard headsets, or if you really want to leave an impression on the minds of your clients we can produce brand and deliver your very own VR cardboard goggles!<br>If cardboard isn’t to your liking then we can supply any goggles from the simplest to full complete headsets with audio and full navigation.<br>Get in touch to find out more!</p>
 		</div>
 		<div class="media">
-			<img src="../imgs/phone.png">
-			<!-- <div class="media__arrow media__arrow--left" ng-click="changeVrImage($event)"></div> -->
-			<!-- <div class="media__arrow media__arrow--right" ng-click="changeVrImage($event)"></div> -->
+			<img src="../imgs/cardboard.png">
+			<div class="media__arrow media__arrow--light media__arrow--left" ng-click="go('/vr-app')"></div>
+			<div class="media__arrow media__arrow--light media__arrow--right" ng-click="go('/vr')"></div>
 		</div>
 		<div class="icons icons--light">
 			<div class="icons__icon" ng-click="go('/doing')">
@@ -22,16 +21,16 @@
 			<div class="icons__icon" ng-click="go('/thinking')">
 				<div class="icons__image icons__image--forward icons__image--forward--light"></div>
 			</div>
-			<div class="icons__icon" ng-click="go('/vr-app')">
+<!-- 			<div class="icons__icon" ng-click="go('/vr')">
 				<div class="icons__image icons__image--vr"></div>
 			</div>
 			<div class="icons__icon" ng-click="go('/vr-cardboard')">
 				<div class="icons__image icons__image--vr-cardboard"></div>
-			</div>
+			</div> -->
 			<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
 				<div class="icons__image icons__image--app"></div>
 				<div class="icons__text"></div>
 			</div>
 		</div>
 	</div>	
-	</main>
+</main>
