add content page

--- a/pages/done/content.html
+++ b/pages/done/content.html
@@ -1,13 +1,13 @@
 <main ng-init="setHeaderTheme('dark')">
 	<div class="inner-container">
 		<div class="copy">
-			<h1>Photography</h1>
-			<p>A picture says a 1000 words, in the world of social and digital when attention spans are short and character counts are limited photography can help tell your story fast and effectively.</p>
+			<h1>Content</h1>
+			<p>From live events, video production to creative campaigns, the development and creation of content is at the very core of TAG The Agency, we love to produce content that inspires your audience to engage.</p>
 		</div>
 		<div class="media">
-			<img src="../imgs/photography.png">
-			<div class="media__arrow media__arrow--left" ng-click="go('/done-brand')"></div>
-			<div class="media__arrow media__arrow--right" ng-click="go('/done-content')"></div>
+			<img src="../imgs/content.png">
+			<div class="media__arrow media__arrow--left" ng-click="go('/done-photography')"></div>
+			<div class="media__arrow media__arrow--right" ng-click="go('/done')"></div>
 		</div>
 		<div class="icons">
 			<div class="icons__icon" ng-click="go('/thinking')">
