--- a/pages/done/done.html
+++ b/pages/done/done.html
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="media__arrow media__arrow--left" ng-click="go('/done-photography')"></div>
+			<div class="media__arrow media__arrow--left" ng-click="go('/done-content')"></div>
 			<div class="media__arrow media__arrow--right" ng-click="go('/done-videos')"></div>
 		</div>
 		<div class="icons">
