add new done pages and fix some mobile issues

--- a/pages/done/advertising.html
+++ b/pages/done/advertising.html
@@ -1,13 +1,13 @@
 <main ng-init="setHeaderTheme('dark')">
 	<div class="inner-container">
 		<div class="copy">
-			<h1>Content</h1>
-			<p>From live events, video production to creative campaigns, the development and creation of content is at the very core of TAG The Agency, we love to produce content that inspires your audience to engage.</p>
+			<h1>Advertising</h1>
+			<p>At TAG The Agency we specialise in the creation and management of advertising on social platforms, working to optimise your return through our unique approach to ad placement, programmatic advertising and A/B split testing of the ad creative, the team at TAG The Agency delivers targeted and effective results.</p>
 		</div>
 		<div class="media">
-			<img src="../imgs/content.png">
+			<iframe class="videos_iframe" src="https://www.youtube.com/embed/VmeehmS5Hpo?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 			<div class="media__arrow media__arrow--left" ng-click="go('/done-photography')"></div>
-			<div class="media__arrow media__arrow--right" ng-click="go('/done-advertising')"></div>
+			<div class="media__arrow media__arrow--right" ng-click="go('/done-event')"></div>
 		</div>
 		<div class="icons">
 			<div class="icons__icon" ng-click="go('/thinking')">
