--- a/pages/done/done.html
+++ b/pages/done/done.html
@@ -10,74 +10,74 @@
 		<div class="media">
 			<div class="work-examples">
 				<div class="work-examples__row-1">
-					<div class="work-examples__item">
-						<div class="work-examples__category">Events</div>
-						<div class="work-examples__title">UX New Zealand</div>
-						<div class="work-examples__video">
-							<iframe class="videos_iframe" src="https://www.youtube.com/embed/Q8sTIb88cTU?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-						<div class="work-examples__description">
-							<p></p>
-						</div>
-						<div class="work-examples__color-strip"></div>
-						<div class="loading-icon loading-icon--yellow"></div>
-					</div>
-					<div class="work-examples__item">
-						<div class="work-examples__category">Advertising</div>
-						<div class="work-examples__title">Social Media Advertising</div>
-						<div class="work-examples__video">
-							<iframe class="videos_iframe" src="https://www.youtube.com/embed/VmeehmS5Hpo?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-						<div class="work-examples__description">
-							<p></p>
-						</div>
-						<div class="work-examples__color-strip"></div>
-					</div>
-					<div class="work-examples__item">
-						<div class="work-examples__category">Production</div>
-						<div class="work-examples__title">Video Production</div>
+					<div class="work-examples__item" ng-click="go('/done-videos')">
+						<div class="work-examples__category">Video Production</div>
+						<div class="work-examples__title"></div>
 						<div class="work-examples__video">
 							<iframe class="videos_iframe" src="https://www.youtube.com/embed/74gs08F50jY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 						</div>
 						<div class="work-examples__description">
-							<p></p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+						<div class="loading-icon loading-icon--yellow"></div>
+					</div>
+					<div class="work-examples__item" ng-click="go('/done-apps')">
+						<div class="work-examples__category">Facebook Apps</div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__video" style="background-image: url('../../imgs/thumbnails/apps.png')">
+						</div>
+						<div class="work-examples__description">
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item" ng-click="go('/done-brand')">
+						<div class="work-examples__category">Brand and Design</div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__video" style="background-image: url('../../imgs/thumbnails/fenz.png');">
+						</div>
+						<div class="work-examples__description">
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item" ng-click="go('/done-content')">
+						<div class="work-examples__category">Content</div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__video" style="background-image: url('../../imgs/thumbnails/content.png');">
+						</div>
+						<div class="work-examples__description">
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
 				</div>
 				<div class="work-examples__row-2">
-					<div class="work-examples__item">
-						<div class="work-examples__category">Creative</div>
-						<div class="work-examples__title">Facebook Apps</div>
-						<div class="work-examples__video">
-							<iframe class="videos_iframe" src="https://www.youtube.com/embed/EEptGUcCBHg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+					<div class="work-examples__item" ng-click="go('/done-event')">
+						<div class="work-examples__category">Event</div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__video" style="background-image: url('../../imgs/thumbnails/apps.png')">
+							<iframe class="videos_iframe" src="https://www.youtube.com/embed/Q8sTIb88cTU?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 						</div>
 						<div class="work-examples__description">
-							<p></p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
-					<div class="work-examples__item">
-						<div class="work-examples__category">Production</div>
-						<div class="work-examples__title">Drone Footage</div>
+					<div class="work-examples__item" ng-click="go('/done-advertising')">
+						<div class="work-examples__category">Advertising</div>
+						<div class="work-examples__title"></div>
 						<div class="work-examples__video">
-							<iframe class="videos_iframe" src="https://www.youtube.com/embed/X_bIawpAjmY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							<iframe class="videos_iframe" src="https://www.youtube.com/embed/VmeehmS5Hpo?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 						</div>
 						<div class="work-examples__description">
-							<p></p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item" ng-click="go('/done-photography')">
+						<div class="work-examples__category">Photography</div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__video" style="background-image: url('../../imgs/thumbnails/photography.png');">
+						</div>
+						<div class="work-examples__description">
 						</div>
 						<div class="work-examples__color-strip work-examples__color-strip--full-pink"></div>
-					</div>
-					<div class="work-examples__item">
-						<div class="work-examples__category">Production</div>
-						<div class="work-examples__title">Video Campaigns</div>
-						<div class="work-examples__video">
-							<iframe class="videos_iframe" src="https://www.youtube.com/embed/BxQt03tX2qY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-						<div class="work-examples__description">
-							<p></p>
-						</div>
-						<div class="work-examples__color-strip work-examples__color-strip--half-pink"></div>
 					</div>
 				</div>
 			</div>
