--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,12 @@
 <div class="background background--homepage"></div>
 <main ng-init="setHeaderTheme('light')">
-	<div class="inner-container">		
+	<div class="inner-container">	
+		<div class="homepage-text">Specialists in digital storytelling for brands.<br>Let's play!</div>	
 		<div class="cmyk-crosses">
 			<div class="cmyk-crosses__wrapper">
 				<div class="cmyk-crosses__item" ng-click="go('/doing')">
 					<div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
-					<div class="cmyk-crosses__text--blue">Doing</div>
+					<div class="cmyk-crosses__text--blue">Production</div>
 				</div>
 				<div class="cmyk-crosses__item" ng-click="go('/vr')">
 					<div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
@@ -13,7 +14,7 @@
 				</div>
 				<div class="cmyk-crosses__item" ng-click="go('/thinking')">
 					<div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
-					<div class="cmyk-crosses__text--yellow">Thinking</div>
+					<div class="cmyk-crosses__text--yellow">Strategy</div>
 				</div>
 				<div class="cmyk-crosses__item" ng-click="go('/done')">
 					<div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
