--- a/pages/how.html
+++ b/pages/how.html
@@ -2,7 +2,7 @@
 	<div class="inner-container">
 		<div class="copy">
 			<h1>We Love to Play</h1>
-			<p>The game of social and digital is at the very core of what we do! How we play and the vision we have is an important part of what makes TAG The Agency a winning team, and our VISION which makes what we do different and unique making for a winning forluma, with our clients as the focus of our game play.</p>
+			<p>The game of social and digital is at the very core of what we do!<br>How we play and the vision we have is an important part of what makes TAG The Agency a winning team.<br>Our vision is what makes what we do different and unique, making a winning formula.<br>Our clients are the focus of our game play.</p>
 		</div>
 		<div class="how">
 		</div>
