--- a/pages/production.html
+++ b/pages/production.html
@@ -2,7 +2,7 @@
 <main ng-init="setHeaderTheme('light')">
 	<div class="inner-container">
 		<div class="copy copy--light">
-			<h1>Doing</h1>
+			<h1>Production</h1>
 			<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
 		</div>
 		<div class="media">
