--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -2,7 +2,7 @@
 <main ng-init="setHeaderTheme('light')">
 	<div class="inner-container inner-container--strategy-page">
 		<div class="copy copy--light">
-			<h1>Thinking</h1>
+			<h1>Strategy</h1>
 			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
 		</div>
 		<div class="media">
