--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -1,23 +1,23 @@
 <div class="background background--strategy"></div>
-<main ng-init="setHeaderTheme('light')">
+<main ng-init="setHeaderTheme('dark')">
 	<div class="inner-container inner-container--strategy-page">
-		<div class="copy copy--light">
+		<div class="copy">
 			<h1>Strategy</h1>
 			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
 		</div>
 		<div class="media">
 			<img src="../imgs/diagrams/Snail diagram updated-59.png">
 		</div>
-		<div class="icons icons--light">
+		<div class="icons icons">
 			<div class="icons__icon" ng-click="go('/vr')">
-				<div class="icons__image icons__image--back icons__image--back--light"></div>
+				<div class="icons__image icons__image--back icons__image--back"></div>
 			</div>
 			<div class="icons__icon" ng-click="go('/')">
-				<div class="icons__image icons__image--home icons__image--home--light"></div>
+				<div class="icons__image icons__image--home icons__image--home"></div>
 				<div class="icons__text">Home</div>
 			</div>
 			<div class="icons__icon" ng-click="go('/done')">
-				<div class="icons__image icons__image--forward icons__image--forward--light"></div>
+				<div class="icons__image icons__image--forward icons__image--forward"></div>
 			</div>
 		</div>
 	</div>
