add video to influencers page and add transparent background to strategy diagram

--- a/pages/influencers.html
+++ b/pages/influencers.html
@@ -8,9 +8,8 @@
 			<p>Our current influencers network covers:</p>
 		</div>
 		<div class="media">
-			<div class="influencer-list">
-				
-			</div>
+			<div class="influencer-list"></div>
+			<iframe src="https://www.youtube.com/embed/BxQt03tX2qY" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="icons icons--light">
 			<div class="icons__icon" ng-click="go('/done')">
