--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -5,7 +5,7 @@
 			<h1>Strategy</h1>
 			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
 		</div>
-		<div class="media">
+		<div class="media media--strategy">
 			<img src="../imgs/diagrams/Snail diagram updated-59.png">
 		</div>
 		<div class="icons icons">
